--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    Yee Haw
+    <!--Content goes here-->
+    <h1>This is my first tag!!</h1>
+    <h3>This is another heading!!</h3>
+    <h6>This is the smallest heading!!</h6>
+
+    <p>This is some <strong>random text</strong> Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p> <p>Deserunt quae laboriosam quo commodi numquam nulla id eligendi rem mollitia, minus odit molestias asperiores, ipsum totam error quaerat eos voluptatum molestiae?</p>
 </body>
 </html>
