--- a/CSS/bootstrap3/bootstrapbasics.html
+++ b/CSS/bootstrap3/bootstrapbasics.html
@@ -21,6 +21,34 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perferendis at vel non tenetur quam illum. Dolorem neque quis magni labore deserunt optio vitae itaque atque hic consequuntur! Quos, dicta culpa.</p>
         <button class="btn btn-success btn-lg">Hi There</button>
         </div>
+
+        <h1>Bootstrap Basics</h1>
+        <button class="btn btn-danger btn-xs">Click Me</button>
+    
+        <a href="http://www.getbootstrap.com" class="btn btn-info btn-lg">Bootstrap Docs</a>
+
+
+        <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputFile">File input</label>
+              <input type="file" id="exampleInputFile">
+              <p class="help-block">Example block-level help text here.</p>
+            </div>
+            <div class="checkbox">
+              <label>
+                <input type="checkbox"> Check me out
+              </label>
+            </div>
+            <button type="submit" class="btn btn-default">Submit</button>
+          </form>
     </div>
 </body>
 </html>
