--- a/CSS/bootstrap3/gallery.html
+++ b/CSS/bootstrap3/gallery.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Gallery</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="gallery.css">
 </head>
 <body>
@@ -39,7 +40,7 @@
     
     <div class="container">
         <div class="jumbotron">
-            <h1><span class="glyphicon glyphicon-camera"></span> The Image Gallery</h1>
+            <h1><i class="fas fa-camera-retro"></i> The Image Gallery</h1>
             <p>A bunch of cool pictures, check them out!</p>
         </div>
 
