--- a/JavaScript/TodoList/toDoList.html
+++ b/JavaScript/TodoList/toDoList.html
@@ -12,7 +12,8 @@
 
     <ul>
         <li>"new" - Add a Todo</li>
-        <li>"list" - View all todos</li>
+        <li>"list" - View all Todos</li>
+        <li>"delete" - Remove Specific Todo</li>
         <li>"quit" - Quit App</li>
     </ul>
 
