--- a/JavaScript/Methods/exercise1.html
+++ b/JavaScript/Methods/exercise1.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>movieDB</title>
+    <title>JS Methods</title>
 </head>
 <body>
+
+    <h1>JS Methods</h1>
+
+    <p>Topics</p>
     
-    <h1>movieDB</h1> 
+    <ul>
+        <li>Adding methods to an object</li>
+        <li>Namespacing</li>
+        <li>The keyword <em>this</em></li>
+    </ul>
 
     <script src="exercise1.js"></script>
 </body>
