--- a/DOM/Events/scoreKeeper.html
+++ b/DOM/Events/scoreKeeper.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Score Keeper</title>
+    <link rel="stylesheet" href="scoreKeeper.css">
 </head>
 <body>
     
@@ -12,7 +13,7 @@
 
     <h1><span id="span1">0</span> to <span id="span2">0</span></h1>
 
-    <p>Playing to: 5</p>
+    <p>Playing to: <span id="pointValue">5</span></p>
 
     <input type="number">
     <button id="first">Player One</button>
