--- a/JavaScript/ColorGame/colorGame.html
+++ b/JavaScript/ColorGame/colorGame.html
@@ -8,7 +8,17 @@
     <link rel="stylesheet" href="colorGame.css">
 </head>
 <body>
-    
+
+    <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+
+    <div id="container">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+    </div>
 
 
 
