--- a/jQuery/patatap/circles.html
+++ b/jQuery/patatap/circles.html
@@ -7,15 +7,76 @@
     <title>Document</title>
     <link rel="stylesheet" href="circles.css">
     <script src="paper-full.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script>
     <script type="text/paperscript" canvas="myCanvas">
     
-        function onKeyDown(event) {
-            var maxPoint = new Point(view.size.width, view.size.height);
-            var randomPoint = Point.random();
-            var point = maxPoint * randomPoint;
-            new Path.Circle(point, 10).fillColor = 'orange';
+        var keyData = {
+            a : {
+                color: "purple",
+                sound: new Howl({
+                    src: ['sounds/sounds/bubbles.mp3']
+                })
+            },
+            b : {
+                color: "green",
+                sound: new Howl({
+                    src: ['sounds/sounds/clay.mp3']
+                })
+            },
+            c : {
+                color: "yellow",
+                sound: new Howl({
+                    src: ['sounds/sounds/confetti.mp3']
+                })
+            },
+            d : {
+                color: "red",
+                sound: new Howl({
+                    src: ['sounds/sounds/corona.mp3']
+                })
+            },
+            e : {
+                color: "orange",
+                sound: new Howl({
+                    src: ['sounds/sounds/dotted-spiral.mp3']
+                })
+            },
+            f : {
+                color: "blue",
+                sound: new Howl({
+                    src: ['sounds/sounds/flash-1.mp3']
+                })
+            },
         }
 
+
+        var circles = [];
+
+
+        function onKeyDown(event) {
+            if(keyData[event.key]){
+                var maxPoint = new Point(view.size.width, view.size.height);
+                var randomPoint = Point.random();
+                var point = maxPoint * randomPoint;
+                var newCircle = new Path.Circle(point, 500);
+                newCircle.fillColor = keyData[event.key].color;
+                keyData[event.key].sound.play();
+                circles.push(newCircle);
+            }
+        }
+
+
+        function onFrame(event){
+            for(var i = 0; i < circles.length; i++){
+                circles[i].fillColor.hue += 1
+                circles[i].scale(.9);
+                if(circles[i].area < 1){
+                    circles[i].remove();
+                    circles.splice(i, 1);
+                    console.log(circles);
+                }
+            }
+        }
     </script>
 </head>
 <body>
